# de_project1

./: .env  main.py  pyproject.toml
config/: logger.py
src/: api_client.py
src/my_app/: api_client.py  holding.py
src/my_app/config/: logger.py
