[project]
name = "de-project1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aws>=0.2.5",
    "boto3>=1.42.9",
    "databricks-cli>=0.18.0",
    "databricks-connect>=18.0.0",
    "dotenv>=0.9.9",
    "pytest>=9.0.2",
    "requests>=2.32.5",
    "ruff>=0.14.9",
]
